
[gd_scene load_steps=3 format=3]

[ext_resource path="res://scripts/create_character.gd" type="Script" id=1]

[node name="CreateCharacter" type="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "Enter name..."

[node name="GenderSelect" type="OptionButton" parent="VBoxContainer"]
[node name="RaceSelect" type="OptionButton" parent="VBoxContainer"]
[node name="BackgroundSelect" type="OptionButton" parent="VBoxContainer"]
[node name="ClassSelect" type="OptionButton" parent="VBoxContainer"]

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
text = "Create Character"
